--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 .root {
   width: 100vw;
   height: 100vh;
-  background-color: dodgerblue;
+  background: url("../assets/img/Background.jpg");
 
   &__content {
     padding-top: 60px;
