--- a/src/app/modules/pages/training/container/training.component.html
+++ b/src/app/modules/pages/training/container/training.component.html
@@ -3,10 +3,14 @@
     <div class="training-page__theme">
       <div class="training-page__theme_l">
         <cyber-security-svg></cyber-security-svg>
-        <a class="training-page__theme-name" [routerLink]="'/training/cyber-security'">Информационная безопасность</a>
+        <a class="training-page__theme-name" (click)="goToPassTest()">Информационная безопасность</a>
       </div>
       <div>
-        <chevron-right-svg></chevron-right-svg>
+        @if(isPassed) {
+          <success-svg></success-svg>
+        } @else {
+          <chevron-right-svg></chevron-right-svg>
+        }
       </div>
     </div>
   </div>
