--- a/src/app/modules/pages/training/pages/cyber-security/container/cyber-security.component.html
+++ b/src/app/modules/pages/training/pages/cyber-security/container/cyber-security.component.html
@@ -1,21 +1,22 @@
 <div class="cyber-security">
-  @if(!errorCode && !showSuccessMessage) {
+  @if(!errorCode && !successCode) {
     @if(currentQuestion === 1){
       <div class="cyber-security__question">
         <span class="cyber-security__text">На экране выводится следующее сообщение. Что необходимо сделать?</span>
-        <img class="cyber-security__question-img" src="../../../../../../../assets/img/question1.jpg" alt="">
+        <img class="cyber-security__question-img" src="../../../../../../../assets/img/question1.png" alt="">
       </div>
       <div class="cyber-security__question-variants">
-        <button class="cyber-security__question-variant" (click)="answerOnQuestion(false)">НЕЗАМЕДЛИТЕЛЬНО СООБЩИТЬ НАЧАЛЬНИКУ СЛУЖБЫ АиМО ЛПУМГ</button>
-        <button class="cyber-security__question-variant" (click)="answerOnQuestion(false)">НЕЗАМЕДЛИТЕЛЬНО СООБЩИТЬ НАЧАЛЬНИКУ ОТДЕЛА ИБ СКЗ</button>
-        <button class="cyber-security__question-variant" (click)="answerOnQuestion(false)">НЕЗАМЕДЛИТЕЛЬНО ОТКЛЮЧИТЬ АСУ ТП ОТ СЕТИ ПИТАНИЯ</button>
-        <button class="cyber-security__question-variant" (click)="answerOnQuestion(true)">НЕЗАМЕДЛИТЕЛЬНО СООБЩИТЬ ДИСПЕТЧЕРУ ЛПУМГ</button>
+        <button class="cyber-security__question-variant" (click)="errorCode = 2">НЕЗАМЕДЛИТЕЛЬНО СООБЩИТЬ НАЧАЛЬНИКУ СЛУЖБЫ АиМО ЛПУМГ</button>
+        <button class="cyber-security__question-variant" (click)="errorCode = 3">НЕЗАМЕДЛИТЕЛЬНО СООБЩИТЬ НАЧАЛЬНИКУ ОТДЕЛА ИБ СКЗ</button>
+        <button class="cyber-security__question-variant" (click)="errorCode = 1">НЕЗАМЕДЛИТЕЛЬНО ОТКЛЮЧИТЬ АСУ ТП ОТ СЕТИ ПИТАНИЯ</button>
+        <button class="cyber-security__question-variant" (click)="successCode = 1">НЕЗАМЕДЛИТЕЛЬНО СООБЩИТЬ ДИСПЕТЧЕРУ ЛПУМГ</button>
       </div>
     }
     @if(currentQuestion === 2){
       <div class="cyber-security__question">
         <span class="cyber-security__text">Какие меры ответственности предусмотрены законодательством РФ за нарушение требований ФЗ от 26.07.2017 №187?
         </span>
+        <img src="../../../../../../../assets/img/question2.gif" alt="">
       </div>
       <div class="cyber-security__question-variants">
         <button class="cyber-security__question-variant" (click)="answerOnQuestion(false)">Уголовная ответственность – до 10 лет
@@ -53,10 +54,10 @@
           <img src="../../../../../../../assets/img/error1.gif" alt="">
         }
         @case(2) {
-          <img src="../../../../../../../assets/img/error2.gif" alt="">
+          <img src="../../../../../../../assets/img/phone.jpg" alt="">
         }
         @case(3) {
-          <img src="../../../../../../../assets/img/error3.gif" alt="">
+          <img src="../../../../../../../assets/img/error2.gif" alt="">
         }
         @case(4) {
           <img src="../../../../../../../assets/img/error4.gif" alt="">
@@ -66,10 +67,14 @@
       <button class="cyber-security__message-button" (click)="errorCode = null">Вернуться к ответу</button>
     </div>
   }
-  @if (showSuccessMessage) {
+  @if (successCode) {
     <div class="cyber-security__message-container">
       <div class="cyber-security__message-title">Молодец!</div>
-      <img src="../../../../../../../assets/img/success.gif" alt="">
+      @switch(successCode) {
+        @case(1) {
+          <img src="../../../../../../../assets/img/success1.jpg" alt="">
+        }
+      }
       <br>
       <button class="cyber-security__message-button" (click)="nextBtnClickHandler()">Дальше</button>
     </div>
