ия по кибербезопасности 2

--- a/src/app/modules/common/shared/components/svg/chevron-right/chevron-right.component.scss
+++ b/src/app/modules/common/shared/components/svg/chevron-right/chevron-right.component.scss
@@ -2,9 +2,9 @@
   display: inline-flex;
   align-items: center;
   justify-items: center;
-  width: 24px;
-  height: 24px;
-  fill: dodgerblue;
+  width: 32px;
+  height: 32px;
+  fill: black;
 }
 
 .chevron-right-svg {
