--- a/src/app/modules/common/shared/components/svg/success/success.component.scss
+++ b/src/app/modules/common/shared/components/svg/success/success.component.scss
@@ -4,7 +4,7 @@
     height: 18px;
     align-items: center;
     justify-items: center;
-    fill: dodgerblue;
+    fill: black;
 }
 
 .filled-success-circle-svg {
