--- a/src/app/modules/common/shared/components/svg/video/video.component.scss
+++ b/src/app/modules/common/shared/components/svg/video/video.component.scss
@@ -4,9 +4,10 @@
   justify-items: center;
   width: 32px;
   height: 32px;
-  fill: black;
+  stroke: black;
+  fill: none;
 }
 
-.cyber-security-svg {
+.video-svg {
   flex-grow: 1;
 }
