--- a/src/app/modules/pages/training/container/training.component.html
+++ b/src/app/modules/pages/training/container/training.component.html
@@ -3,7 +3,7 @@
     <div class="training-page__theme">
       <div class="training-page__theme_l">
         <cyber-security-svg></cyber-security-svg>
-        <a class="training-page__theme-name" (click)="goToPassTest()">Информационная безопасность</a>
+        <a class="training-page__theme-name" (click)="goToPassTest()">Тестирование для персонала ответственных за функционирование объектов КИИ</a>
       </div>
       <div>
         @if(isPassed) {
@@ -11,6 +11,24 @@
         } @else {
           <chevron-right-svg></chevron-right-svg>
         }
+      </div>
+    </div>
+    <div class="training-page__theme">
+      <div class="training-page__theme_l">
+        <cyber-security-svg></cyber-security-svg>
+        <a class="training-page__theme-name">Тестирование для персонала ответственных за эксплуатацию объектов КИИ</a>
+      </div>
+      <div>
+        <chevron-right-svg></chevron-right-svg>
+      </div>
+    </div>
+    <div class="training-page__theme">
+      <div class="training-page__theme_l">
+        <cyber-security-svg></cyber-security-svg>
+        <a class="training-page__theme-name">Тестирование для администраторов АСУ ТП/администраторов ИБ АСУ ТП</a>
+      </div>
+      <div>
+        <chevron-right-svg></chevron-right-svg>
       </div>
     </div>
   </div>
