--- a/src/app/modules/pages/training/pages/cyber-security/container/cyber-security.component.html
+++ b/src/app/modules/pages/training/pages/cyber-security/container/cyber-security.component.html
@@ -19,15 +19,15 @@
         <img src="../../../../../../../assets/img/question2.gif" alt="">
       </div>
       <div class="cyber-security__question-variants">
-        <button class="cyber-security__question-variant" (click)="answerOnQuestion(false)">Уголовная ответственность – до 10 лет
-          Административная ответственность – штраф
+        <button class="cyber-security__question-variant" (click)="answerOnQuestion(false)">УГОЛОВНАЯ ОТВЕТСТВЕННОСТЬ – ДО 10 ЛЕТ
+          АДМИНИСТРАТИВНАЯ ОТВЕТСТВЕННОСТЬ – ШТРАФ
           </button>
-        <button class="cyber-security__question-variant" (click)="answerOnQuestion(false)">Уголовная ответственность – до 3 лет
+        <button class="cyber-security__question-variant" (click)="answerOnQuestion(false)">УГОЛОВНАЯ ОТВЕТСТВЕННОСТЬ – ДО 3 ЛЕТ
         </button>
-        <button class="cyber-security__question-variant" (click)="answerOnQuestion(false)">Административная ответственность – штраф
+        <button class="cyber-security__question-variant" (click)="answerOnQuestion(false)">АДМИНИСТРАТИВНАЯ ОТВЕТСТВЕННОСТЬ – ШТРАФ
         </button>
-        <button class="cyber-security__question-variant" (click)="answerOnQuestion(true)">Уголовная ответственность – до 5 лет
-          Административная ответственность – штраф
+        <button class="cyber-security__question-variant" (click)="answerOnQuestion(true)">УГОЛОВНАЯ ОТВЕТСТВЕННОСТЬ – ДО 5 ЛЕТ
+          АДМИНИСТРАТИВНАЯ ОТВЕТСТВЕННОСТЬ – ШТРАФ
           </button>
       </div>
     }
@@ -37,11 +37,11 @@
         </span>
       </div>
       <div class="cyber-security__question-variants">
-        <button class="cyber-security__question-variant" (click)="answerOnQuestion(false)">Конфедициальная информационная инфрастурктура
+        <button class="cyber-security__question-variant" (click)="answerOnQuestion(false)">КОНФЕДИЦИАЛЬНАЯ ИНФОРМАЦИОННАЯ ИНФРАСТУРКТУРА
           </button>
-        <button class="cyber-security__question-variant" (click)="answerOnQuestion(false)">Критическая информационная инфрастурктура
+        <button class="cyber-security__question-variant" (click)="answerOnQuestion(false)">КРИТИЧЕСКАЯ ИНФОРМАЦИОННАЯ ИНФРАСТУРКТУРА
         </button>
-        <button class="cyber-security__question-variant" (click)="answerOnQuestion(true)">Комерческая информационная инфрастурктура
+        <button class="cyber-security__question-variant" (click)="answerOnQuestion(true)">КОМЕРЧЕСКАЯ ИНФОРМАЦИОННАЯ ИНФРАСТУРКТУРА
         </button>
       </div>
     }
@@ -49,20 +49,22 @@
   @if(errorCode) {
     <div class="cyber-security__message-container">
       <div class="cyber-security__message-title">Вы проиграли</div>
-      @switch(errorCode) {
-        @case(1) {
-          <img src="../../../../../../../assets/img/error1.gif" alt="">
+      <div class="cyber-security__message-image">
+        @switch(errorCode) {
+          @case(1) {
+            <img src="../../../../../../../assets/img/error1.gif" alt="">
+          }
+          @case(2) {
+            <img src="../../../../../../../assets/img/phone.jpg" alt="">
+          }
+          @case(3) {
+            <img src="../../../../../../../assets/img/error2.gif" alt="">
+          }
+          @case(4) {
+            <img src="../../../../../../../assets/img/error4.gif" alt="">
+          }
         }
-        @case(2) {
-          <img src="../../../../../../../assets/img/phone.jpg" alt="">
-        }
-        @case(3) {
-          <img src="../../../../../../../assets/img/error2.gif" alt="">
-        }
-        @case(4) {
-          <img src="../../../../../../../assets/img/error4.gif" alt="">
-        }
-      }
+      </div>
       <br>
       <button class="cyber-security__message-button" (click)="errorCode = null">Вернуться к ответу</button>
     </div>
@@ -70,11 +72,13 @@
   @if (successCode) {
     <div class="cyber-security__message-container">
       <div class="cyber-security__message-title">Молодец!</div>
-      @switch(successCode) {
-        @case(1) {
-          <img src="../../../../../../../assets/img/success1.jpg" alt="">
+      <div class="cyber-security__message-image">
+        @switch(successCode) {
+          @case(1) {
+            <img src="../../../../../../../assets/img/success1.jpg" alt="">
+          }
         }
-      }
+      </div>
       <br>
       <button class="cyber-security__message-button" (click)="nextBtnClickHandler()">Дальше</button>
     </div>
