--- a/src/app/modules/pages/training/pages/cyber-security/container/cyber-security.component.scss
+++ b/src/app/modules/pages/training/pages/cyber-security/container/cyber-security.component.scss
@@ -4,7 +4,7 @@
 
     &__text {
         display: block;
-        font-size: 24px;
+        font-size: 36px;
         margin-bottom: 8px;
     }
 
@@ -14,7 +14,7 @@
 
         &-img {
             width: 750px;
-            height: 500px;  
+            height: 500px;
         }
 
         &-variants {
@@ -25,7 +25,7 @@
 
         &-variant {
             color: black;
-            font-size: 14px;
+            font-size: 22px;
             text-align: left;
             padding: 8px 16px;
             border-radius: 10px;
@@ -44,14 +44,34 @@
         &-title {
             color: white;
             font-size: 36px;
+          margin-bottom: 16px;
         }
 
+      &-image {
+        text-align: center;
+        max-width: 600px;
+        max-height: 700px;
+        margin: 0 auto;
+
+        & img {
+          max-width: 100%;
+          max-height: 100%;
+        }
+      }
+
         &-button {
+            font-size: 22px;
             margin-top: 16px;
-            width: 200px;
+            width: 250px;
             padding: 8px;
             border-radius: 10px;
-            color: dodgerblue;
+            color: black;
+
+          &:hover {
+            transition: all .3s ease-in-out;
+            color: white;
+            background-color: cornflowerblue;
+          }
         }
     }
 }
